// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Button Component Button Snapshot 1`] = `
<DocumentFragment>
  <button
    class="button"
  >
    Test Button
  </button>
</DocumentFragment>
`;

exports[`Button Component Toggle Button Snapshot 1`] = `
<DocumentFragment>
  <button
    aria-pressed="false"
    class="button button-toggle"
  >
    Test Button
  </button>
</DocumentFragment>
`;
